--- a/aaron-testing/Rakefile
+++ b/aaron-testing/Rakefile
@@ -5,6 +5,7 @@ HOSTS = localhost #vkajdslm
 
 actionset1: #potato
 	echo starting actionset1
+	remote-pwd
+	remote-lsadkm
 	cal
 		requires client-c.c potato.c
-	remote-cal
