if bread is pain in french i own a fucking bakery

--- a/daniel_testing/Rakefile
+++ b/daniel_testing/Rakefile
@@ -8,3 +8,6 @@ actionset1: #potato
 	cal
 		requires client-c.c potato.c
 	remote-cal
+		requires client-c.c potato.c
+	remote-cc program.c # potato
+		requires program.c program.h allfunctions.h # potato
